--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ html,
 
 body {
     display: flex;
+    justify-content: center;
 }
 
 img {
-    max-width: 100px;
-    max-height: 100px;
+    max-height: 50%;
 }
