--- a/style.css
+++ b/style.css
@@ -1,17 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@400;700&family=Outfit:wght@400;700&display=swap');
+
 html,
 
 body {
+    background-color: hsl(30, 38%, 92%);
     display: flex;
     justify-content: center;
+    padding: 60px;
 }
 
 img {
     display: flexbox;
-    /* justify-content: center; */
-    max-height: 50%;
+    max-height: 60vh;
 }
 
 .message {
     box-sizing: content-box;
-    text-align: left; 
+    max-width: 22%;
+    max-height: 60vh;
+    background-color: hsl(0, 0%, 100%);
+    display: inline-block;
+    padding-left: 2em;
+    /* text-align: left; */
+}
+
+h1 {
+    font-family: Fraunces;
+    font-weight: 700;
+}
+
+p {
+    font-size: 14px;
+    font-family: Montserrat;
+    font-weight: 400;
+}
+
+.flex {
+    display: flex;
+    font-family: Fraunces;
+    font-size: 25px;
+    font-weight: 700;
+    text-decoration: hsl(158, 88%, 10%);
+}
+
+.figure {
+    padding-left: 2em;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: line-through;
+}
+
+h2 {
+    box-sizing: content-box;
+    background-color: hsl(158, 36%, 37%);
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
 }
