--- a/style.css
+++ b/style.css
@@ -11,22 +11,31 @@ body {
 
 img {
     display: flexbox;
-    max-height: 60vh;
+    max-height: 50%;
 }
+/* 
+.container {
+    width: 40px;
+    height: 300px;
+    background-image: url(images/image-product-desktop.jpg), (border-box);
+    background-position: left top, right bottom;
+    background-size: 50%, 50%;
+    border-radius: 9px;
+    } */
 
 .message {
     box-sizing: content-box;
     max-width: 22%;
-    max-height: 60vh;
+    max-height: 50%;
     background-color: hsl(0, 0%, 100%);
     display: inline-block;
     padding-left: 2em;
-    /* text-align: left; */
 }
 
 h1 {
     font-family: Fraunces;
     font-weight: 700;
+    padding-top: 20px;
 }
 
 p {
@@ -41,6 +50,8 @@ p {
     font-size: 25px;
     font-weight: 700;
     text-decoration: hsl(158, 88%, 10%);
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 
 .figure {
@@ -53,9 +64,13 @@ p {
 
 h2 {
     box-sizing: content-box;
+    width: 15vw;
+    height: 5vh;
+    border-radius: 9px;
     background-color: hsl(158, 36%, 37%);
     font-family: Montserrat;
     font-size: 14px;
     font-weight: 700;
     text-align: center;
+    padding-top: 10px;
 }
