--- a/style.css
+++ b/style.css
@@ -93,24 +93,34 @@ button {
     font-size: 14px;
     font-weight: 700;
     color: hsl(0, 0%, 100%);
-    text-align: center;
     margin-top: 1.2rem;
     border: none;
+    background-image: url(images/icon-cart.svg);
+    background-repeat: no-repeat;
+    background-position: calc(4em);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-    /* For mobile phones */
-    @media only screen and (max-width: 375px) {
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            min-width: 300px;
-        }
-        .container img {
-            border-radius: 10px 10px 0 0;
-        }
-        .message {
-            border-radius: 0 0 10px 10px;
-        }
+button:hover {
+    cursor: pointer;
+    background-color: hsl(158, 36%, 20%);
+}
+
+/* For mobile phones */
+@media only screen and (max-width: 375px) {
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        min-width: 300px;
+    }
+    .container img {
+        border-radius: 10px 10px 0 0;
+    }
+    .message {
+        border-radius: 0 0 10px 10px;
+    }
 }
 
 @media only screen and (max-width: 1440px) {
